--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/**
+
+General styles only that are not related to any specific page
+
+ */
+
 * {
     margin: 0;
     padding: 0;
@@ -6,11 +12,9 @@
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    line-height: 1.6;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: #2f3033;
 }
 
 code {
@@ -20,4 +24,57 @@ code {
 a, a:active, a:hover {
     color: #009fd9;
     text-decoration: none;
+}
+
+button, input[type=checkbox] + label, input[type=radio] + label, option, select {
+    cursor: pointer;
+}
+
+/*
+Set the font size of the form elements to at least 16px.
+On mobile browser will zoom if the font-size is less than 16px.
+ */
+input[type='text'],
+input[type='email'],
+input[type='password'],
+input[type="search"],
+input[type="tel"],
+input[type="date"],
+input[type="datetime"],
+textarea {
+    font-size: 16px;
+}
+
+select {
+    border: 1px solid #d3d4d5;
+    appearance: none;
+    height: 54px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0 10px;
+    background: url("/img/down-arrow.svg") 96% / 16px no-repeat;
+}
+
+button {
+    font-size: 16px;
+    /*font-weight: bolder;*/
+    padding: 0 10px;
+    border: none;
+    color: #fff;
+    background-color: #009fd9;
+    border-radius: 4px;
+    min-height: 48px;
+}
+
+button.wide {
+    width: 100%;
+}
+
+.grey {
+    background-color: #e9eced;
+}
+
+.noscroll {
+    overflow: hidden;
 }
