--- a/src/auth/Auth.module.css
+++ b/src/auth/Auth.module.css
@@ -18,7 +18,7 @@
     padding: 32px;
 }
 
-.input-label {
+.inputLabel {
     font-size: 16px;
     font-weight: 700;
     display: flex;
@@ -53,7 +53,8 @@
 .termsWarning {
     font-size: 14px;
     text-align: center;
-    margin: 16px 0 16px 0;
+    margin: 16px 0 0 0;
+    line-height: 1.5;
 }
 
 .afterwords {
