--- a/src/auth/Auth.module.css
+++ b/src/auth/Auth.module.css
@@ -1,3 +1,10 @@
+.error {
+    text-align: center;
+    color: rgba(205, 30, 38, 0.84);
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
 .authForm {
     background-color: #fafafa;
 }
