Add Formik and Yup for validation.

--- a/src/auth/Auth.module.css
+++ b/src/auth/Auth.module.css
@@ -79,3 +79,31 @@
 .twoColumns > div {
     margin: 0;
 }
+
+
+/*
+    Shaking animation
+    https://css-tricks.com/snippets/css/shake-css-keyframe-animation/
+ */
+.inputError {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+    border: 1px solid #CD1E26;
+}
+
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
